--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,5 @@
 .Footer {
   border-top: 2px solid currentColor;
-  font-family: var(--fontFamilySerif);
   font-size: var(--fontSizeMedium);
   margin-top: var(--spaceMedium);
   padding-bottom: var(--spaceMedium);
@@ -12,7 +11,10 @@
   background-color: transparent;
   border: none;
   color: inherit;
-  outline: none;
+  font-size: var(--fontSizeLarge);
+  font-weight: 600;
+  letter-spacing: 0;
+  outline: none
 }
 
 .Footer a {
@@ -23,30 +25,25 @@
   user-select: none;
 }
 
-.Footer a[target='_blank']:hover {
-  color: currentColor;
-}
-
-.Footer a[target='_blank']::after {
-  display: none;
-}
-
 .ChatBubble {
-  --size: 0.7rem;
+  --size: 13px;
+  --backgroundColor: #e9e9eb;
+  --textColor: black;
 
   animation-duration: 400ms;
   animation-fill-mode: both;
   animation-name: fadeInUp;
   animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
-  background-color: white;
+  background-color: var(--backgroundColor);
   border-radius: calc(2 * var(--size));
-  color: var(--colorGreyDarker);
+  color: var(--textColor);
   display: inline-block;
   font-family: var(--fontFamilySystem);
   font-size: var(--size);
+  letter-spacing: -0.03em;
   line-height: 1;
   margin-left: 0.5em;
-  padding-bottom: 0.5em;
+  padding-bottom: 0.6em;
   padding-left: 0.8em;
   padding-right: 0.8em;
   padding-top: 0.5em;
@@ -63,7 +60,7 @@
 }
 
 .ChatBubble::before {
-  background-color: white;
+  background-color: var(--backgroundColor);
   border-bottom-right-radius: 1em;
   height: 1em;
   left: -0.4em;
