--- a/src/styles/_settings.css
+++ b/src/styles/_settings.css
@@ -1,5 +1,5 @@
 :root {
-  --colorBlack: hsl(0, 0%, 10%);
+  --colorBlack: hsl(0, 0%, 3%);
   --colorWhite: hsl(0, 0%, 95%);
   --colorHighlight: hsl(48, 24%, 94%);
 
@@ -25,8 +25,8 @@
     0px 8px 8px rgba(0, 0, 0, 0.02), 0px 24px 24px rgba(0, 0, 0, 0.03);
 
   --fontFamilySystem: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Helvetica Neue', sans-serif;  
-  --fontFamilySans: 'Söhne', var(--fontFamilySystem);
-  --fontFamilyMono: 'Söhne Mono', Monacao, monospace;
+  --fontFamilySans: var(--fontFamilySystem);
+  --fontFamilyMono: 'IBM Plex Mono', Monacao, monospace;
   --fontFamilySerif: 'EB Garamond', Georgia, serif;
 
   --fontSizeSmallest: 0.8rem;
@@ -47,9 +47,7 @@
   --transitionFast: 50ms ease-out;
 
   --gutter: var(--spaceDefault);
-  --maxWidth: 700px;
-
-  --glowSize: 1200px;
+  --maxWidth: 640px;
 }
 
 @media (prefers-color-scheme: dark) {
