--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,37 +1,25 @@
 @import url('src/styles/_breakpoints.css');
 
-.Glow {
-  display: none;
-}
+.Header {
+  margin-bottom: var(--spaceMedium);
+  padding-top: 0.75rem;
+  position: relative;
 
-@media (--md) {
-  .Glow {
-    background-image: radial-gradient(white 0%, rgba(255, 255, 255, 0) 50%);
-    display: block;
-    height: var(--glowSize);
-    left: calc(var(--glowSize) / -2);
-    position: fixed;
-    top: calc(var(--glowSize) / -2);
-    width: var(--glowSize);
-    z-index: -1;
+  @media (--md) {
+      margin-bottom: var(--spaceMedium);
+      padding-top: calc(var(--spaceMedium) + 4px);
   }
 }
 
-.Header {
-  margin-bottom: var(--spaceDefault);
-  padding-top: 0.75rem;
-  position: relative;
-}
-
 .Header-logo {
-  font-size: 16px;
-  font-weight: 600;
+  font-size: 16px;  
+  font-weight: 500;
   line-height: 1.5;
   margin-bottom: 0;
+  min-height: 3rem;
   padding-top: 0;
   position: relative;
-  z-index: 10
-
+  z-index: 10;
 }
 
 .Header-logo span {
@@ -41,13 +29,6 @@
   font-size: var(--fontSizeSmall);
   font-weight: 400;
   text-transform: none;
-}
-
-@media (--md) {
-  .Header {
-    margin-bottom: calc(var(--spaceMedium));
-    padding-top: calc(var(--spaceMedium) + 4px);
-  }
 }
 
 .NavWrapper {
@@ -99,8 +80,6 @@
 
 @media (--md) {
   .HeroContainer {
-    margin-left: -4rem;
-    margin-right: -4rem;
     margin-top: var(--spaceMedium);
   }
 }
