Remove Glow reference from 404, add favicon to Layout

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,6 +23,8 @@ const url = `https://bradcerasani.me${metaSlug}`;
 
     <title>{title}</title>
 
+    <link href="/favicon.svg" rel="icon" type="image/svg+xml" />
+
     <meta name="robots" content="index,follow" />
     <meta name="googlebot" content="index,follow" />
 
