--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,8 @@
 ---
 import { getCollection } from 'astro:content';
-import { ChaosGallery, Grid, GridItem, Header, TimelineItem } from 'src/components';
+import { ChaosGallery, Grid, GridItem, Header, SocialLinks, TimelineItem } from 'src/components';
 import PostImage from 'src/components/PostImage.astro';
 import PostVideo from 'src/components/PostVideo.astro';
-import { linkList } from 'src/content/social/linkList';
 import Layout from 'src/layouts/Layout.astro';
 import { filterEntriesByStatus } from 'src/utils/filterEntriesByStatus';
 import { mapEntryEssentials } from 'src/utils/mapEntryEssentials';
@@ -39,25 +38,14 @@ const description = `I've been building on the web for 15 years, helping compani
       </p>
     </section>
 
-    <section>
-      <Grid gutter="var(--spaceDefault)">
+    <section class="u-none u-block@md">
+      <Grid gutter="0">
         <GridItem width={{ base: '50%' }}>
           <h6 class="u-pt-0">Elsewhere</h6>
-
-          <ul class="LinkList">
-            {
-              linkList.map(({ title, url }) => (
-                <li>
-                  <a href={url} rel="noopener noreferrer" target="_blank">
-                    {title}
-                  </a>
-                </li>
-              ))
-            }
-          </ul>
+          <SocialLinks client:idle />
         </GridItem>
 
-        <GridItem width={{ base: '50%' }}>
+        <GridItem width={{ base: '50%', md: '50% - var(--spaceMedium)' }}>
           <h6 class="u-pt-0">Photos</h6>
           <ChaosGallery client:idle />
         </GridItem>
@@ -65,12 +53,11 @@ const description = `I've been building on the web for 15 years, helping compani
     </section>
 
     <section class="Entries">
-      <h6>Side Projects</h6>
+      <h6 class="u-pt-0" style={{ marginBottom: '2rem' }}>Side Projects</h6>
       <div>
         {
           sortedEntries.map((entry) => {
             const { video, image, description } = entry.data;
-
             return (
               <TimelineItem entry={entry}>
                 {video && <PostVideo src={video} size="default" />}
@@ -81,81 +68,12 @@ const description = `I've been building on the web for 15 years, helping compani
         }
       </div>
     </section>
-  </main></Layout
->
 
-<style>
-  .LinkList {
-    color: var(--colorGreyDefault);
-    font-size: var(--fontSizeSmall);
-    line-height: 1.75;
-    margin-bottom: 0;
-
-    li {
-      margin-bottom: 0;
-    }
-    li:first-of-type {
-      margin-top: -0.25rem;
-    }
-    a {
-      text-decoration: none;
-    }
-  }
-
-  .Entries {
-    margin-bottom: var(--spaceLarge);
-    margin-top: var(--spaceMedium);
-
-    h6 {
-      margin-bottom: var(--spaceDefault);
-      padding-top: 0;
-    }
-  }
-
-  a[target='_blank'] {
-    font-variant-numeric: tabular-nums;
-    transition:
-      color,
-      opacity var(--transitionFast);
-    will-change: color, opacity;
-  }
-
-  a[target='_blank']::after {
-    content: '↯';
-    display: inline-block;
-    opacity: 1;
-    position: absolute;
-    transform: rotate(225deg) translateY(0.2rem) translateX(-0.2rem);
-    transition-duration: var(--transitionSlow);
-    transition-property: color, opacity;
-    transition-timing-function: ease-in-out;
-    will-change: color, opacity;
-  }
-
-  a[target='_blank']:hover {
-    color: var(--colorGreyDarker);
-  }
-
-  a[target='_blank']:hover::after {
-    opacity: 1;
-    transition-duration: var(--transitionFast);
-    transition-property: color, opacity;
-    transition-timing-function: ease-in-out;
-  }
-
-  a[href*='instagram']:hover::after {
-    color: #833ab4;
-  }
-
-  a[href*='twitter']:hover::after {
-    color: #1da1f2;
-  }
-
-  a[href*='github']:hover::after {
-    color: #4ac26b;
-  }
-
-  a[href*='linkedin']:hover::after {
-    color: #0077b5;
-  }
-</style>
+    <style>
+      .Entries {
+        margin-bottom: var(--spaceLarge);
+        margin-top: var(--spaceMedium);
+      }
+    </style>
+  </main>
+</Layout>
