--- a/src/components/Figure.css
+++ b/src/components/Figure.css
@@ -1,4 +1,4 @@
-@import 'src/styles/_breakpoints.css';
+@import url('src/styles/_breakpoints.css');
 
 .Figure {
   margin-bottom: var(--spaceDefault);
