--- a/src/components/MobileNav.css
+++ b/src/components/MobileNav.css
@@ -1,4 +1,4 @@
-@import 'src/styles/_breakpoints.css';
+@import url('src/styles/_breakpoints.css');
 
 .MobileNavMenu {
   --size: var(--spaceDefault);
