--- a/src/styles/code-blocks.css
+++ b/src/styles/code-blocks.css
@@ -1,4 +1,4 @@
-@import url('./_breakpoints.css');
+@import url('src/styles/_breakpoints.css');
 
 code[class*='astro-code'],
 pre[class*='astro-code'] {
