--- a/src/components/Timeline.css
+++ b/src/components/Timeline.css
@@ -19,6 +19,10 @@
     z-index: 5;
   }
 
+  @media (prefers-color-scheme: dark) {
+    --timelineColor: hsl(0, 0%, 24%);
+  }
+
   &:first-of-type {
     figure {
       margin-top: 0;
@@ -108,7 +112,7 @@
   }
 
   p {
-    color: hsl(0, 0%, 44%);
+    color: var(--colorGreyDefault);
     font-size: var(--fontSizeSmall);
     margin-bottom: 0;
   }
@@ -153,7 +157,7 @@
 }
 
 .Timeline-date {
-  color: hsl(0, 0%, 44%);  
+  color: var(--colorGreyDefault);  
   font-size: var(--fontSizeSmallest);
   font-size: 12px;
   font-weight: 500;
