Move Garamond preload to global <head />

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,6 +44,8 @@ const url = `https://bradcerasani.me${metaSlug ?? ''}`;
     <meta name="twitter:image" content={imageUrl} />
     <meta name="twitter:site:id" content="@bradcerasani" />
     <meta name="twitter:creator" content="@bradcerasani" />
+
+    <link rel="preload" as="font" href="/fonts/EB-Garamond-Bold.woff2" crossorigin />
   </head>
   <body>
     <Container>
