Remove FontFace, attempt prefetch with empty span

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -86,3 +86,5 @@ const description = `I've been building on the web for 15 years, helping compani
     </style>
   </main>
 </Layout>
+
+<span style={{ fontFamily: 'var(--fontFamilySerif)' }}></span>
