Add barrel export for utils

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,7 @@ import 'src/styles/animations.css';
 import 'src/styles/base.css';
 import 'src/styles/fonts.css';
 import 'src/styles/utilities.css';
-import { stripTags } from 'src/utils/stripTags';
+import { stripTags } from 'src/utils';
 
 const { metaTitle, metaDescription, metaImage, metaSlug } = Astro.props;
 
