--- a/src/components/SocialLinks.css
+++ b/src/components/SocialLinks.css
@@ -1,62 +1,121 @@
 @import url('src/styles/_breakpoints.css');
 
 .SocialLinks {
+  --socialLinkHeight: 1.75rem;
+
+  align-items: flex-start;
   color: var(--colorGreyDarker);
-  font-size: var(--fontSizeSmaller);
+  display: flex;
+  flex-direction: column;
   font-size: 14px;
-  line-height: 1;
   margin-bottom: 0;
+  margin-top: -0.25rem; /* align w/ChaosGallery handle */
+  position: relative;
+}
+
+.SocialLink {
+  height: var(--socialLinkHeight);
+  line-height: var(--socialLinkHeight);
+  margin: 0;
+  padding: 0;
+  position: relative;
+}
+
+.SocialLink a {
+  color: inherit;
+  display: block;
   padding-left: 0.75rem;
+  padding-right: 3.25rem;
+  text-decoration: none;
+  transition-duration: 100ms;
+  transition-property: color;
+  transition-timing-function: ease-in-out;
 
-  li {
-    margin-bottom: 1rem;
+  &:hover {
+    color: var(--colorBlack);
   }
 
-  a {
-    font-variant-numeric: tabular-nums;
-    text-decoration: none;
-    transition-duration: var(--transitionFast);
-    transition-property: color, opacity;
-    transition-timing-function: ease-in-out;
-    will-change: color, opacity;
+  &::after {
+    --iconSize: 1.25rem;
+
+    border-radius: calc(var(--iconSize) / 2);
+    color: white;
+    content: '↗';
+    font-size: 16px;
+    font-weight: 500;
+    height: var(--iconSize);
+    line-height: var(--iconSize);
+    opacity: 0;
+    pointer-events: none;
+    position: absolute;
+    right: 0.75rem;
+    text-align: center;
+    top: calc(50% - var(--iconSize) / 2);
+    transform: scale(0.6);
+    transform-origin: center;
+    transition-duration: 150ms;
+    transition-property: opacity, transform;
+    transition-timing-function: cubic-bezier(0.25, 1.5, 0.75, 1);
+    width: var(--iconSize);
+    will-change: opacity, transform;
+  }
+
+  &:hover::after {
+    opacity: 1;
+    transform: scale(1);
+    transition-delay: 500ms;
+  }
+
+  &:active::after {
+    opacity: 0.5;
+    transform: translate(0.5rem, -0.5rem);
+    transition-delay: 0ms;
+    transition-duration: 300ms;
+    transition-timing-function: cubic-bezier(0.22, 1, 0.36, 1);
   }
 }
 
-.SocialLinks a::after {
-  color: var(--colorGreyLighter);
-  content: '↯';
-  display: inline-block;
-  opacity: 1;
+.SocialLink .Instagram::after {
+  background-image: radial-gradient(
+    circle at 30% 107%,
+    #fdf497 0%,
+    #fdf497 5%,
+    #fd5949 45%,
+    #d6249f 60%,
+    #285aeb 90%
+  );
+}
+
+.SocialLink .Twitter::after {
+  background-color: #1da1f2;
+}
+
+.SocialLink .GitHub::after {
+  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cmask id='mask0_1_24' style='mask-type:alpha' maskUnits='userSpaceOnUse' x='0' y='0' width='20' height='20'%3E%3Crect width='20' height='20' fill='white'/%3E%3C/mask%3E%3Cg mask='url(%23mask0_1_24)'%3E%3Crect x='-4' y='-4' width='7' height='7' fill='%23549F57'/%3E%3Crect x='10' y='-4' width='7' height='7' fill='%23549F57'/%3E%3Crect x='10' y='10' width='7' height='7' fill='%23ACE7AE'/%3E%3Crect x='-4' y='10' width='7' height='7' fill='%23EBEDF0'/%3E%3Crect x='-4' y='3' width='7' height='7' fill='%23386C3E'/%3E%3Crect x='10' y='3' width='7' height='7' fill='%23386C3E'/%3E%3Crect x='10' y='17' width='7' height='7' fill='%23386C3E'/%3E%3Crect x='-4' y='17' width='7' height='7' fill='%23ACE7AE'/%3E%3Crect x='3' y='3' width='7' height='7' fill='%23549F57'/%3E%3Crect x='17' y='3' width='7' height='7' fill='%23EBEDF0'/%3E%3Crect x='17' y='17' width='7' height='7' fill='%23386C3E'/%3E%3Crect x='3' y='17' width='7' height='7' fill='%23549F57'/%3E%3Crect x='3' y='-4' width='7' height='7' fill='%23ACE7AE'/%3E%3Crect x='17' y='-4' width='7' height='7' fill='%23386C3E'/%3E%3Crect x='17' y='10' width='7' height='7' fill='%23549F57'/%3E%3Crect x='3' y='10' width='7' height='7' fill='%23386C3E'/%3E%3C/g%3E%3C/svg%3E%0A");
+  background-position: center;
+  background-size: cover;
+}
+
+.SocialLink .LinkedIn::after {
+  background-color: #0077b5;
+}
+
+.SocialLink-highlight {
+  background-color: var(--colorGreyLightest);
+  border-radius: 0.25rem;
+  height: var(--socialLinkHeight);
+  left: 0;
+  margin: 0;
+  opacity: 0;
   position: absolute;
-  transform: rotate(225deg) translateY(0.2rem) translateX(-0.2rem);
-  transition-duration: 300ms;
-  transition-property: color, opacity;
+  top: 0;
+  transition-duration: 100ms;
+  transition-property: width, transform, opacity;
   transition-timing-function: ease-in-out;
-  will-change: color, opacity;
+  will-change: width, transform, opacity;
+  z-index: -1;
 }
 
-.SocialLinks a:hover {
-  color: var(--colorGreyDarker);
-}
-
-.SocialLinks a:hover::after {
-  transition-duration: var(--transitionFast);
-  transition-property: color, opacity;
-  transition-timing-function: ease-in-out;
-}
-
-a[href*='instagram']:hover::after {
-  color: #833ab4;
-}
-
-a[href*='twitter']:hover::after {
-  color: #1da1f2;
-}
-
-a[href*='github']:hover::after {
-  color: #4ac26b;
-}
-
-a[href*='linkedin']:hover::after {
-  color: #0077b5;
+.SocialLinks:hover .SocialLink-highlight {
+  opacity: 1;
 }
