--- a/src/styles/animations.css
+++ b/src/styles/animations.css
@@ -34,3 +34,13 @@
     transform: scale(4);
   }
 }
+
+@keyframes spin {
+  0% {
+    transform: rotate(0);
+  }
+  
+  100% {
+    transform: rotate(360deg);
+  }
+}
