--- a/src/styles/animations.css
+++ b/src/styles/animations.css
@@ -25,8 +25,12 @@
     opacity: 1;
     transform: scale(1);
   }
-  80% {
-    opacity: 0;
+  25% {
+    opacity: 0.8;
+    transform: scale(2);
+  }
+  50% {
+    opacity: 0.8;
     transform: scale(3);
   }
   100% {
@@ -39,7 +43,7 @@
   0% {
     transform: rotate(0);
   }
-  
+
   100% {
     transform: rotate(360deg);
   }
