--- a/src/components/ChaosGallery.css
+++ b/src/components/ChaosGallery.css
@@ -126,7 +126,7 @@
 }
 
 .ChaosController {
-  --handleSize: 1.25rem;
+  --handleSize: 1.5rem;
   --trackHeight: 3px;
   --trackColor: var(--colorGreyLighter);
 
@@ -148,11 +148,11 @@
     border-radius: 50%;
     box-shadow: 0 0 1.5rem 0 hsla(0, 0%, 0%, 0.2);
     content: '';
-    height: 1rem;
+    height: var(--handleSize);
     left: 0;
     position: absolute;
     top: 0;
-    width: 1rem;
+    width: var(--handleSize);
     z-index: -1;
   }
 
@@ -165,14 +165,14 @@
     border-radius: 50%;
     content: '';
     display: block;
-    height: 1rem;
+    height: var(--handleSize);
     left: 0rem;
     position: absolute;
     top: -0.5px;
     transition-duration: 150ms;
     transition-property: opacity, scale, border-color;
     transition-timing-function: ease-in-out;
-    width: 1rem;
+    width: var(--handleSize);
     will-change: opacity, scale, border-color;
   }
 
@@ -180,7 +180,8 @@
     border-color: var(--colorGreyDark);
   }
 
-  &.is-discovered::before {
+  &.is-discovered::before,
+  &.is-discovered::after {
     display: none;
   }
 
