--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -101,7 +101,7 @@ h3 {
 h4 {
   background-color: var(--colorGreyLightest);
   border-radius: 0.25rem;
-  color: var(--colorGreyDarker);
+  color: var(--colorGreyDark);
   display: inline-block;
   font-size: 14px;
   font-style: italic;
