--- a/src/styles/animations.css
+++ b/src/styles/animations.css
@@ -8,6 +8,16 @@
   }
 }
 
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
 @keyframes fadeInUp {
   from {
     opacity: 0;
@@ -27,15 +37,15 @@
   }
   25% {
     opacity: 0.8;
-    transform: scale(2);
+    transform: scale(1.5);
   }
   50% {
     opacity: 0.8;
-    transform: scale(3);
+    transform: scale(2);
   }
   100% {
     opacity: 0;
-    transform: scale(4);
+    transform: scale(2.5);
   }
 }
 
@@ -48,3 +58,10 @@
     transform: rotate(360deg);
   }
 }
+
+@keyframes hide {
+  100% {
+    display: none;
+  }
+}
+
