--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -48,7 +48,7 @@ body {
     position: absolute;
     top: 0;
     width: 100%;
-    z-index: 10;
+    z-index: 100;
   }
 }
 
@@ -65,7 +65,7 @@ h4,
 h5,
 h6 {
   color: var(--colorBlack);
-  line-height: 1.25;
+  line-height: 1.5;
   margin-bottom: 0.25rem;
   margin-top: 0;
 }
@@ -88,7 +88,7 @@ h1 {
 
 h2 {
   font-size: var(--fontSizeLarge);
-  font-weight: 600;
+  font-weight: 700;
   margin-bottom: 1.125rem;
   padding-top: 1.875rem;
 }
@@ -131,7 +131,7 @@ mark {
 strong {
   background-color: var(--colorGreyLightest);
   font-weight: 400;
-  padding: 2px 6px;  
+  padding: 2px 6px;
 }
 
 /* 
@@ -200,7 +200,7 @@ blockquote {
 
   &::before {
     color: var(--colorBlack);
-    content: '“';  
+    content: '“';
     font-size: 2.5rem;
     font-weight: 700;
     left: 0;
@@ -231,7 +231,7 @@ blockquote p {
   line-height: 1.25;
   text-wrap: balance;
 
-  @media (--md) {  
+  @media (--md) {
     font-size: 28px;
     padding-left: 2rem;
   }
@@ -247,6 +247,7 @@ img,
 video {
   display: block;
   height: auto;
+  position: relative;
   width: 100%;
 }
 
