--- a/src/components/PostImage.astro
+++ b/src/components/PostImage.astro
@@ -1,5 +1,5 @@
 ---
-import { Caption, Figure } from 'src/components';
+import { Caption, Figure, MediaWrapper } from 'src/components';
 import Image from './RawImage.astro';
 
 const {
@@ -34,6 +34,8 @@ if (!sizes || widths.length === 0) {
 ---
 
 <Figure size={size}>
-  <Image src={src} alt={alt || caption} sizes={sizes} widths={widths} />
+  <MediaWrapper>
+    <Image src={src} alt={alt || caption} sizes={sizes} widths={widths} />
+  </MediaWrapper>
   {caption && <Caption>{caption}</Caption>}
 </Figure>
