Add meta theme-color

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,6 +44,9 @@ const url = `https://bradcerasani.me${metaSlug ?? ''}`;
     <meta name="twitter:image" content={imageUrl} />
     <meta name="twitter:site:id" content="@bradcerasani" />
     <meta name="twitter:creator" content="@bradcerasani" />
+
+    <!-- Note: equivalent to var(--backgroundColor) -->
+    <meta name="theme-color" content="hsl(60, 2%, 98%)" media="(prefers-color-scheme: light)" />
   </head>
   <body>
     <Container>
