--- a/src/components/SocialLinks.css
+++ b/src/components/SocialLinks.css
@@ -67,10 +67,11 @@
   }
 
   &:active::after {
-    opacity: 0.5;
-    transform: translate(0.5rem, -0.5rem);
+    opacity: 0;
+    transform: translate(3rem, -3rem);
     transition-delay: 0ms;
-    transition-duration: 300ms;
+    transition-duration: 1s;
+    transition-timing-function: ease-in-out;
     transition-timing-function: cubic-bezier(0.22, 1, 0.36, 1);
   }
 }
